--- a/frontend/views/chatpage/ChatPage.css
+++ b/frontend/views/chatpage/ChatPage.css
@@ -1,6 +1,16 @@
 .chatLayout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   border: 1px solid;
-  width: 50%;
+  width: 80%;
+  padding: 20px;
+}
+
+.top {
+  padding: 20px;
+  width: 100%;
+}
+
+.top input {
+  padding: 20px;
 }
